<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_radius_cvContactos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivFotoContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario_"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvNombreContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombreFormulario"
            android:textSize="@dimen/size_nombre_cardView"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tcTelefonoContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefonoFormulario"
            android:textSize="@dimen/size_tel_CV"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>